# python-doublex

./: .gitignore  .hgignore  .ian  .travis.yml  BUGS  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  PROPOSALS.py  README.rst  ToDo  clean.mk  debian-vcs.mk  debian.mk  doc.rst  make  make.mk  pyproject.toml  requirements.txt  setup.py  tox.ini  unittest.cfg  version.py  wiki.mk
.github/workflows/: tests.yml
debian/: changelog  control  copyright  rules  watch
docs/: Makefile  README.rst.inc.old  api.rst  async-spies.rst  async-spies.rst.test  calls.rst  calls.rst.test  conf.py  contents.rst.inc  delegates.rst  delegates.rst.test  doubles.rst  doubles.rst.test  index.rst  inline-setup.rst  install.rst  methods.rst  methods.rst.test  mimics.rst  mimics.rst.test  observers.rst  observers.rst.test  properties.rst  properties.rst.test  pyDoubles.rst  reference.rst  reference.rst.in  reference.rst.test  release-notes.rst
doctests/: Makefile  conf.py  index.rst  test.rst
doublex/: __init__.py  const.py  doubles.py  exc.py  internal.py  matchers.py  proxy.py  py27_backports.py  safeunicode.py  tools.py  tracer.py
doublex/pyDoubles/: __init__.py
doublex/test/: README  any_arg_tests.py  async_race_condition_test.py  chain_tests.py  issue-14.py  (+4 more)
pydoubles-site/: doublex-documentation  downloads  overview  pydoubles-documentation  release-notes  support
slides/: Makefile  index.html  sample.py  slides.tex
test/: README  pyDoubles-hamcrest-integration.py  pyDoublesTests_unit.py  pyDoubles_legacy_tests.py  report_tests.py  reports.py  unit.py  unit_tests.py
(+10 files in other folders)
